feat: naviguer entre pages + bouton finish à la fin + fenetre de dialogue quand quizz fini